--- a/templates/Cadastro.html
+++ b/templates/Cadastro.html
@@ -4,8 +4,8 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 		<meta charset="utf-8"/>
 		<title> Cadastro </title>
-        <link rel="shortcut icon" href="imagens/imagem.png">
-        <link href="{{ url_for('static', filename='CSS/Cadastro.css') }}" rel="stylesheet" type="text/css">
+		<link rel="shortcut icon" href="{{ url_for('static', filename='imagens/imagem.png') }}">
+		<link href="{{ url_for('static', filename='CSS/Cadastro.css') }}" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -22,28 +22,21 @@
 			</div>
 		</nav>
 
-		<script language="javascript" src="{{ url_for('static', filename='JS/Cadastro.js') }}"></script>
-
 		<form method="POST">
-			<h2 id="titulo">Crie Sua Conta</h2></br>
-			<div id = "meio">
+			<h2 id="titulo"><b>CRIE SUA CONTA</b></h2></br>
+			<div id ="meio">
 				{{ form.hidden_tag() }}
-				{{ form.username.label }}<br>
-				{{ form.username }}<br>
-				{{ form.email.label }}<br>
-				{{ form.email }}<br>
-				{{ form.password.label }}<br>
-				{{ form.password }}<br>
+				<b>{{ form.username.label }}</b><br>
+				{{ form.username(class_="conteudo") }}<br>
+				<b>{{ form.email.label }}</b><br>
+				{{ form.email(class_="conteudo") }}<br>
+				<b>{{ form.password.label }}</b><br>
+				{{ form.password(class_="conteudo") }}<br><br>
 				
-				{{ form.botao }}
-				<!--<table >
-					<tr> <td> <h5 class="corl">Usuario</h5> </td> <td> <h5><input type="text" id="usuario"/></h5> </td> </tr>
-					<tr> <td> <h5 class="corl">Senha</h5> </td> <td> <h5><input type="password" id="senha"/></h5> </td> </tr>
-					<tr> <td> <h5 class="corl">Email</h5> </td> <td> <h5><input type="email" id="email"/></h5> </td> </tr>
-				</table>-->
+				{{ form.botao(class_="butao") }}
+				
 			</div></br>
 		</form>
-		<!--<p id="butao"><input  type="submit" onclick = "validacao()"/></p>-->
 
 	</body>
 </html>
