--- a/static/CSS/Login.css
+++ b/static/CSS/Login.css
@@ -1,36 +1,26 @@
-			body{
-				background-color: gray;
-			}
-			#meio{
-				
-				margin-left: auto;
-        		margin-right: auto;
-    			width: 20em
-			}
-			#titulo{
-				
-				margin-top: 13%;
-				margin-left: auto;
-        		margin-right: auto;
-    			width: 9em
-			}
-			#usuario{
-				border-radius: 10px 10px 10px 10px;
-				border-color: purple;
-			}
-			#senha{
-				border-radius: 10px 10px 10px 10px;
-				border-color: purple;
-			}
-			#CPF{
-				border-radius: 10px 10px 10px 10px;
-				border-color: purple;
-			}
-			.corl{
-				color: purple;
-			}	
-			#butao{
-				margin-left: auto;
-        		margin-right: auto;
-    			width: 1em
-			}
+body{
+	background-color: gray;
+}
+#meio{
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	width: 20em
+}
+#titulo{
+	text-align: center;
+	margin-top: 8%;
+	margin-left: auto;
+	margin-right: auto;
+	width: 15.2em
+}
+
+.conteudo{
+	border-radius: 10px 10px 10px 10px;
+	border-color:purple;
+}
+.butao{
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+}
