--- a/static/CSS/Cadastro.css
+++ b/static/CSS/Cadastro.css
@@ -1,36 +1,26 @@
 			body{
 				background-color: gray;
 			}
-			.meio{
+			#meio{
+				text-align: center;
 				margin-left: auto;
         		margin-right: auto;
     			width: 20em
 			}
-			.titulo{
+			#titulo{
 				text-align: center;
-				margin-top: 13%;
+				margin-top: 8%;
 				margin-left: auto;
         		margin-right: auto;
     			width: 15.2em
 			}
 			
-			#usuario{
+			.conteudo{
 				border-radius: 10px 10px 10px 10px;
 				border-color:purple;
 			}
-			#senha{
-				border-radius: 10px 10px 10px 10px;
-				border-color: purple;
-			}
-			#email{
-				border-radius: 10px 10px 10px 10px;
-				border-color: purple;
-			}
-			.corl{
-				color: purple;
-			}	
-			#butao{
+			.butao{
+				text-align: center;
 				margin-left: auto;
         		margin-right: auto;
-    			width: 1em
 			}
