--- a/static/CSS/Denuncia.css
+++ b/static/CSS/Denuncia.css
@@ -1,28 +1,26 @@
-	    body{
-				background-color: gray;
-			}
-		.centro{
-			margin-left: 25%;
-        	margin-right: 25%;
-    		width: 90em
+body{
+	background-color: gray;
+}
+#meio{
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	width: 30em
+}
+#titulo{
+	text-align: center;
+	margin-top: 8%;
+	margin-left: auto;
+	margin-right: auto;
+	width: 15.2em
+}
 
-		}
-		#titulo{
-				margin-top: 5%;
-				margin-left: auto;
-        		margin-right: auto;
-    			width: 13em
-			}
-			
-			#butao{
-				margin-left: auto;
-        		margin-right: auto;
-    			width: 6em
-			}
-			.borda{
-				border-radius: 10px 10px 10px 10px;
-				border-color: blue;
-				}
-			.corl{
-				color: blue;
-			}
+.conteudo{
+	border-radius: 10px 10px 10px 10px;
+	border-color:purple;
+}
+.butao{
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+}
